monitor.scss: Fix white space/new lines (refactoring)

--- a/src/bundle/Resources/public/scss/monitor.scss
+++ b/src/bundle/Resources/public/scss/monitor.scss
@@ -32,13 +32,8 @@
       }
       td {
         padding: calculateRem(11px);
+        white-space: nowrap;
       }
     }
-  }
-}
-
-.physical_memory_usage, .swap_space_usage {
-  table td {
-    white-space: nowrap;
   }
 }
